plugins/javaFX/testData/highlighting/controllerInExpression.fxml
<?import javafx.scene.control.Label?>
<?import javafx.scene.layout.VBox?>
<?import javafx.scene.control.Tooltip?>
<?import ControllerInExpressionWrapper?>
<?import ControllerInExpression?>
<VBox fx:controller="ControllerInExpression" xmlns:fx="http://javafx.com/fxml">
    <fx:define>
        <Tooltip text="tooltip" fx:id="tooltip"/>
    </fx:define>
    <fx:define>
        <ControllerInExpressionWrapper fx:id="wrapper" controller="$controller"/>
    </fx:define>
    <fx:define>
        <ControllerInExpressionWrapper fx:id="wrapper2" controller=<error descr="Invalid value: unable to coerce to ControllerInExpression">"$tooltip"</error>/>
    </fx:define>
    <Label text="$controller"/>
    <Label text="${controller.strProp}"
           maxWidth="$controller"
           minHeight="${controller.intProp}"
           maxHeight="${controller.doubleProp}"
           tooltip=<error descr="Invalid value: unable to coerce to javafx.scene.control.Tooltip">"${controller.strProp}"</error>
    />
    <Label text="${controller.<error descr="Cannot resolve symbol 'unknownProp'">unknownProp</error>}"/>
</VBox>